<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.onepiecequiz.QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/question_one"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/color_question" />

        <RadioGroup
            android:id="@+id/number_one_radio_group"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/swim_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cannot_swim"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/taste_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lose_taste"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/fire_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fire"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/sleep_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cannot_sleep"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_two"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/color_question" />

        <RadioGroup
            android:id="@+id/number_two_radio_group"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/zeff_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zeff"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/shanks_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shanks"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/usopp_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usopp"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/sanji_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sanji"
                android:textSize="16sp" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_three"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/color_question" />

        <RadioGroup
            android:id="@+id/number_three_radio_group"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/baroque_works_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baroque_works"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/buggy_alvida_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buggy_alvida"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/arlong_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arlong"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/krieg_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/krieg"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_four"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/color_question" />

        <CheckBox
            android:id="@+id/nico_robin_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nico_robin"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/tashigi_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tashigi"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/nojiko_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nojiko"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/kuina_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/kuina"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_five"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/color_question" />

        <RadioGroup
            android:id="@+id/number_five_radio_group"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/doctor_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/navigator_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navigator"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/cook_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cook"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/musician_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/musician"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_six"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/color_question" />

        <EditText
            android:id="@+id/six_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/enter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_seven"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/color_question" />

        <RadioGroup
            android:id="@+id/number_seven_radio_group"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten_million_beri"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twenty_million_beri"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/berries_3000_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thirty_million_beri"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifty_million_beri"
                android:textSize="16sp" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_eight"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/color_question" />

        <CheckBox
            android:id="@+id/red_force_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/red_force"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/thousand_sunny_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thousand_sunny"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/moby_dick_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moby_dick"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/going_merry_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/going_merry"
            android:textSize="16sp" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_submit" />

    </LinearLayout>

</ScrollView>